[package]
name = "fast_hilbert"
version = "1.0.2-alpha.0"
authors = ["Armin <becherarmin@gmail.com>"]
edition = "2018"
description = "Fast Hilbert 2D curve computation using an efficient Lookup Table (LUT)."
keywords = [ "space-filling-curve", "hilbert", "peano-curves", "mapping", "algorithm" ]
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
repository = "https://github.com/becheran/fast-hilbert"

[dependencies]
num-traits = { version = "0.2.15", features = [ "i128" ] }

[dev-dependencies]
image = "0.23.13"
criterion = "0.3"
hilbert = "0.1.1"
hilbert_2d = "1.0.0"
hilbert_curve = "0.2.0"

[[bench]]
name = "benchmark"
harness = false
