[package]
name = "fast_hilbert"
version = "2.0.1-alpha.0"
authors = ["Armin <becherarmin@gmail.com>"]
edition = "2018"
description = "Fast Hilbert 2D curve computation using an efficient Lookup Table (LUT)."
keywords = [ "space-filling-curve", "hilbert", "peano-curves", "mapping", "algorithm" ]
readme = "README.md"
license = "MIT"
categories = ["algorithms"]
repository = "https://github.com/becheran/fast-hilbert"

[dev-dependencies]
image = "0.25.6"
criterion = "0.5.1"
hilbert = "0.1.2"
hilbert_2d = "1.1.0"
hilbert_curve = "0.2.0"

[[bench]]
name = "benchmark"
harness = false
